# Otter-NumericCalculus

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.py  yoshi-otter1.3.3.tar.xz
.github/workflows/: python-pypi-test-upload.yml  python-pypi-upload.yml
Older Versions/: yoshi-otter1.3.2.tar.xz
Older Versions/yoshi-otter1.2/: setup.py
Older Versions/yoshi-otter1.2/yoshi_otter.egg-info/: PKG-INFO
Older Versions/yoshi-otter1.3/: README.md  setup.py
Older Versions/yoshi-otter1.3.1/: setup.py
Older Versions/yoshi-otter1.3.2/yoshi_otter.egg-info/: PKG-INFO
Older Versions/yoshi-otter1.3/yoshi_otter.egg-info/: PKG-INFO
Otter/: Otter.py  __init__.py
Otter.egg-info/: PKG-INFO  SOURCES.txt
Source Code - Otter/: Otter.py
tests/algebra/: test_algebra.py
tests/algebra/edo/: test_edo.py
tests/algebra/integral/: test_integral_double.py  test_integral_simple.py
tests/algebra/roots/: test_roots.py
tests/interpolation/: test_interpolation.py
yoshi-otter1.3.1/Otter/: Otter.py
yoshi-otter1.3.2/: setup.py
yoshi-otter1.3.2/yoshi_otter.egg-info/: PKG-INFO
yoshi-otter1.3.3/: setup.py
yoshi-otter1.3.3/Otter/: Otter.py
yoshi-otter1.3.3/yoshi_otter.egg-info/: PKG-INFO  requires.txt
yoshi-otter1.4/: setup.py
yoshi-otter1.4/Otter/: __init__.py
yoshi-otter1.4/yoshi_otter.egg-info/: PKG-INFO  SOURCES.txt
yoshi_otter/: __init__.py
yoshi_otter.egg-info/: PKG-INFO
yoshi_otter/algebra/: __algebra.py  __init__.py
yoshi_otter/interpolation/: __init__.py  __interpolation.py
yoshi_otter/shared/: __init__.py  invalid_function_signature.py
(+6 files in other folders)
